--- a/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html
+++ b/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html
@@ -7,7 +7,7 @@
     
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta charset="utf-8"/>
-<title>My Business Account - CRA sign in -  Canada.ca</title>
+<title>My Business Account - CRA sign-in -  Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 
 
@@ -230,7 +230,7 @@
 		<nav id="wb-bc" property="breadcrumb"><h2 class="wb-inv">You are here:</h2><div class="container"><ol class="breadcrumb">
 <li><a href='https://www.canada.ca/en.html'>Canada.ca</a></li>
             <li><a href='https://www.canada.ca/en/revenue-agency.html'>Canada Revenue Agency</a></li>
-            <li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html'>CRA accounts</a></li>
+            <li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html'>CRA sign-in services</a></li>
 </ol></div></nav>
 
 
@@ -261,13 +261,13 @@
         <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
          <section class="container">
   <div class="mwstitle section">
-    <h1 property="name" class="wb-inv" dir="ltr"> My Business Account - CRA Sign in</h1>
+    <h1 property="name" class="wb-inv" dir="ltr"> My Business Account - CRA sign-in</h1>
     </div>
     <div aria-hidden="true">
-      <p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">CRA Sign in</p>
+      <p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">CRA sign-in</p>
       <h1 class="gc-thickline mrgn-tp-0" id="wb-cont">My Business Account</h1>
   </div>
-  <p>Sign in or register to view and update your business tax information, file and submit returns for many programs, and access your GST/HST, payroll, corporation income taxes, excise taxes, excise duties and other levies accounts.</p>
+ <p>Sign in or register to view and update your business tax information, file and submit returns for many programs, and access your GST/HST, payroll, corporation income taxes, excise taxes, excise duties and other levies accounts.</p>
 		
 </section>
  <section class="container">
@@ -275,8 +275,8 @@
     <div class="alert alert-info">
       <div>
         <details class="mrgn-bttm-0">
-            <summary>A faster way to validate your identity when you register</summary>
-          <p><i>Interac</i>&reg; document verification service is now available. When you register for a CRA online account, you can use this service to verify your identity immediately instead of waiting 5 to 10 business days to get your CRA security code in the mail. </p>
+          <summary>A faster way to verify your identity when you register</summary>
+          <p>A document verification service is now available. When you register for the CRA sign-in services, you can use this option to verify your identity immediately instead of waiting 5 to 10 business days to get your CRA security code in the mail. </p>
          <!-- <p>To get faster access to all features, go to: <a href="/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html">register for a sign-in account</a>.</p>-->
         </details>
       <!--  <details class="mrgn-bttm-0">
@@ -294,11 +294,11 @@
   <div class="well well-sm brdr-rds-0 mrgn-tp-lg">
     <div class="panel panel-default mrgn-bttm-0 brdr-rds-0">
       <div class="panel-body">
-        <h2 class="wb-inv">CRAMy Business Account access</h2>
+        <h2 class="wb-inv">CRA My Business Account access</h2>
         <div class="cnjnctn-type-or cnjnctn-md mrgn-tp-0 brdr-0">
           <div class="cnjnctn-col">
             <div id="ajax-sign-in">
-              <h3 class="mrgn-tp-sm">Sign in to your account</h3>
+              <h3 class="mrgn-tp-sm">Sign in to My Business Account</h3>
               <p>You must use the sign-in option you registered with:</p>
               <div class="row mrgn-tp-md">
                 <div class="col-sm-10 col-sm-offset-1">
@@ -308,32 +308,38 @@
                       <dt>Process for confirming a representative</dt>
                       <dd>Authorization requests submitted through Represent a Client may need to be confirmed by the client from one of the CRA’s sign-in accounts. To learn more about the process and some exceptions, go to <a href="/sign-in-test/en/revenue-agency/services/tax/representative-authorization/confirm-representative.html">Confirm my representative’s authorization request</a>.</dd>
                       <dt>Using a shared device</dt>
-                      <dd>If you use auto-complete for your credentials, make sure the sign-in information is your own and not that of someone else.</dd>
+                      <dd>If you use autofill for your credentials, make sure the sign-in information is your own and not that of someone else.</dd>
                       <dt>If you're not sure which sign-in option to choose</dt>
                       <dd>Use the option you registered with every time you sign in. If you want to choose another sign-in option, you may need to revoke your credential or call us before you can register for it.</dd>
                     </dl>
                     <p>Get more <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=myacct">help with your account</a>.</p>
                   </details>-->
                   <ul class="list-unstyled lst-spcd-2">
-                    <li><a data-gc-analytics-customclick="CRA|ARC:Option 2 button click:CRA login button" class="btn btn-primary btn-lg btn-block p-sm-3" href="https://ams-sga.cra-arc.gc.ca/gol-ged/awsc/amss/entry?target=login&lang=en&program=mbsl&idp=cms"><span class="h4"><span class="fas fa-sign-in-alt fa-fw fa-lg mrgn-rght-sm fa-pull-left"></span>CRA user ID and password<span class="wb-inv"> sign-in</span></span></a></li>
-                    <li><a data-gc-analytics-customclick="CRA|ARC:Option 1 button click:Sign-In Partner Login/Register button" class="btn btn-primary btn-lg btn-block p-sm-3" href="https://ams-sga-cra-arc.fjgc-gccf.gc.ca/gol-ged/awsc/amss/commonDomain/w?target=login&lang=en&program=mbsl&idp=idp1&dm=x"><span class="h4"><span class="fas fa-university fa-fw fa-lg mrgn-rght-sm  fa-pull-left"></span><i>Interac</i>&reg; sign-in partner<span class="wb-inv"> bank sign-in</span></span></a>
-		    		       		                 <section class="mrgn-tp-md mrgn-lft-md" data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html#ajax-help-interac2"></section>
+                    <li><a data-gc-analytics-customclick="CRA|ARC:Option 1 button click:Sign-In Partner Login/Register button" class="btn btn-primary btn-lg btn-block p-sm-3" href="https://ams-sga-cra-arc.fjgc-gccf.gc.ca/gol-ged/awsc/amss/commonDomain/w?target=login&lang=en&program=mbsl&idp=idp1&dm=x"><span class="h4"><span class="fas fa-university fa-fw fa-lg mrgn-rght-sm  fa-pull-left"></span>Sign-In Partner<span class="wb-inv"> bank sign-in</span></span></a>
+		       		                 <section class="mrgn-tp-md mrgn-lft-md" data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html#ajax-help-interac2"></section>
 
 		    </li>
+			                      <li><a data-gc-analytics-customclick="CRA|ARC:Option 2 button click:CRA login button" class="btn btn-primary btn-lg btn-block p-sm-3" href="https://ams-sga.cra-arc.gc.ca/gol-ged/awsc/amss/entry?target=login&lang=en&program=mbsl&idp=cms"><span class="h4"><span class="fas fa-sign-in-alt fa-fw fa-lg mrgn-rght-sm fa-pull-left"></span>CRA user ID and password<span class="wb-inv"> sign-in</span></span></a></li>
+
                   </ul>
                 </div>
               </div>
             </div>
           </div>
           <div class="cnjnctn-col cnjnctn-col-60">
-            <h3 class="mrgn-tp-sm">Register for an account</h3>
-            <p>If you don't already have a CRA account, you can create one.</p>
+            <h3 class="mrgn-tp-sm">Register for My Business Account</h3>
+            <p>Register if you don't already have:
+		    <ul>
+			    <li>My Account</li>
+			    <li>My Business Account</li>
+			    <li>Represent a Client</li>
+		    </ul>
             <div class="row mrgn-tp-md">
 	<!--	    <details class="mrgn-bttm-lg">
 				 <summary class="max-content">If you are using a shared device</summary>
-				 			    <p>If you use a shared device (like a computer at a public library) do not use auto-complete for your credentials. Make sure the sign-in information is your own and not that of someone else.</p>
+				 			    <p>If you use a shared device (like a computer at a public library) do not use autofill for your credentials. Make sure the sign-in information is your own and not that of someone else.</p>
 			 </details>-->
-              <div class="col-sm-10 col-sm-offset-1"> <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html?account=mba" class="btn btn-default btn-lg btn-block p-sm-3"><span class="h4"><span class="fas fa-user-edit fa-lg mrgn-rght-sm fa-pull-left"></span>Register for My Business Account</span></a></div>
+              <div class="col-sm-10 col-sm-offset-1"> <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html?account=mba" class="btn btn-default btn-lg btn-block p-sm-3"><span class="h4"><span class="fas fa-user-plus fa-lg mrgn-rght-sm fa-pull-left"></span>Register for My Business Account</span></a></div>
             </div>
           </div>
         </div>
@@ -347,11 +353,10 @@
     <h3 class="h5 wb-inv">Common issues</h3>
     <div class="row">
       <div class="col-sm-6">
-        <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html#ajax-forgotten-password-userID"></section>
+            <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html#ajax-forgotten-password-userID"></section>
       	      <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html#ajax-did-not-receive-passcode"></section>
 	      <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html#ajax-expired-security-code"></section>
-	      			      <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html#ajax-update-information"></section>
-
+	       <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html#ajax-change-information"></section>
 	       </div>
         <div class="col-sm-6">
 	      <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html#ajax-recover-locked-account"></section>
@@ -363,11 +368,11 @@
     <div class="row gc-srvinfo mrgn-tp-lg">
       <div class="col-sm-6">
         <h3 class="mrgn-tp-0"><a href="/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=mybusacct">Help with using My Business Account</a></h3>
-        <p>How to register and manage your account, update your information, use multi-factor authentication (MFA)</p>
+        <p>How to register, manage and update your information, use multi-factor authentication (MFA)</p>
       </div>
       <div class="col-sm-6">
         <h3 class="mrgn-tp-0"><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-businesses/business-account/about-myba.html">About My Business Account</a></h3>
-        <p>What's new and updated, account availability, features, privacy commitments</p>
+        <p>What's new and updated, availability, services, privacy commitments</p>
       </div>
     </div>
   </section>
@@ -380,7 +385,7 @@
       <p>Manage your EI details, Canada Pension Plan (CPP), or Old Age Security (OAS)</p>
     </div>-->
     <div class="col-sm-6 col-md-4">
-      <h3><a href="/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html">CRA accounts</a></h3>
+      <h3><a href="/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html">CRA sign-in services</a></h3>
       <p>Sign in or register for My Account, My Business Account or Represent a Client with the CRA</p>
     </div>
     <div class="col-sm-6 col-md-4">
