--- a/en/revenue-agency/services/e-services/digital-services-businesses/business-account/about-myba.html
+++ b/en/revenue-agency/services/e-services/digital-services-businesses/business-account/about-myba.html
@@ -246,7 +246,7 @@
 		<nav id="wb-bc" property="breadcrumb"><h2 class="wb-inv">You are here:</h2><div class="container"><ol class="breadcrumb">
 <li><a href='https://www.canada.ca/en.html'>Canada.ca</a></li>
 <li><a href='https://www.canada.ca/en/revenue-agency.html'>Canada Revenue Agency</a></li>
-            <li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html'>CRA accounts</a></li>
+            <li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html'>CRA sign-in services</a></li>
 <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account sign-in</a></li>
 
 </ol></div></nav>
@@ -294,18 +294,68 @@ About My Business Account</h1>
 	<p>To access GST/HST accounts that are administered by Revenu Québec, go to: <a href="https://www.revenuquebec.ca/en/businesses/my-account-for-businesses/">Revenu Québec's website</a></p>
 	<h3>On this page</h3>
     <ul>
-	          <li><a href="#section1">What's new and updated</a></li>
+	          
 
-      <li><a href="#section2">Who can use My Business Account</a></li>
-      <li><a href="#section3">Sign-in options</a></li>
-	          <li><a href="#section4">Features available in My Business Account</a></li>
-	          <li><a href="#section5">Account availability</a></li>
+      <li><a href="#section1">Who can use My Business Account</a></li>
+      <li><a href="#section2">Sign-in options</a></li>
+	          <li><a href="#section3">Services in My Business Account</a></li>
+	          <li><a href="#section4">Sign-in services availability</a></li>
+	    <li><a href="#section5">What's new</a></li>
 	          <li><a href="#section6">Resources</a></li>
 
     </ul>
-	<h2 id="section1">What's new and updated</h2>
-  <h3>Get quick access by validating your identity when you register</h3>
-<p><i>Interac&reg</i> document verification service (DVS) is an alternative identity validation option that allows Canadians to register for and access the CRA accounts in real-time. DVS provides the option for digital identity validation through document verification when registering for the CRA’s accounts. Canadians choosing this option will no longer need to wait up to 10 business days to receive a CRA security code by paper mail in order to register and access the CRA accounts. The process requires a mobile device to take a picture of the user’s government-issued photo identification and of themselves to verify their identity. To use this service you must:</p>
+	
+	
+	<h2 id="section1">Who can use My Business Account</h2>
+  <p>Business owners (including partners, directors, and officers) can use My Business Account. Authorized representatives (including accountants and employees) can access these services through <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
+	
+<h2 id="section2">Sign-in options</h2>
+	<p>There are 2 options for signing in:</p>
+	<dl class="dl-horizontal">
+   	      <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-account.html#ajax-CRA"></section>
+		   	      <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-account.html#ajax-interac"></section>
+
+	</dl>
+	<p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">Sign in to My Business Account</a></p>
+	<!--<p>To sign in to another CRA sign-in account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html">CRA sign-in accounts</a></p>-->
+	
+	<h2 id="section3">Services in My Business Account</h2>
+	<p>After signing in to My Business Account, you can access all the services available.</p>
+	<p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/my-business-account-services.html">List of services available in My Business Account</a></p>
+	<!--<ul>
+		<li>View and update your business information</li>
+		<li>View and pay your account balances</li>
+		<li>Get email notifications</li>
+		<li>Set up direct deposit</li>
+		<li>Track your transactions</li>
+		<li>Set up a payment plan</li>
+		
+	</ul>-->
+
+	<h2 id="section4">Sign-in services availability</h2>
+ <p>Access your sign-in service during our available hours of service. If you are having difficulty, you might need to update your browser.</p>
+	  <h3>Hours of service</h3>
+	 <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/availability.html#ajax-hours-of-service"></section>
+
+<!--  <details class="max-content">
+    <summary>Hours of operation</summary>
+    <ul class="list-unstyled lst-spcd">
+      <li><strong>Newfoundland Standard Time:</strong> 7:30 am to 4:30 am</li>
+      <li><strong>Atlantic Standard Time:</strong> 7 am to 4 am</li>
+      <li><strong>Eastern Standard Time:</strong> 6 am to 3 am</li>
+      <li><strong>Central Standard Time:</strong> 5 am to 2 am</li>
+      <li><strong>Mountain Standard Time:</strong> 4 am to 1 am</li>
+      <li><strong>Pacific Standard Time:</strong> 3 am to 12 am (midnight)</li>
+    </ul>
+  </details>-->
+  
+
+<h3>Browser requirements</h3>
+	  
+		      <section data-ajax-replace="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/availability.html#ajax-browser-requirements"></section>
+<h2 id="section5">What's new</h2>
+  <h3>Document verification service</h3>
+	<p>The document verification service is an alternative identity validation option that allows Canadians to register for and access the CRA sign-in services in real-time. It provides the option for digital identity validation through document verification when registering for the CRA’s sign-in services. Canadians choosing this option will no longer need to wait up to 10 business days to receive a CRA security code by paper mail in order to register and access the CRA sign-in services. The process requires a mobile device to take a picture of the user’s government-issued photo identification and of themselves to verify their identity. To use this service you must:</p>
 <ul>
 <li>Be 16 years of age or older</li>
 <li>Have an accepted government-issued photo identification</li>
@@ -345,42 +395,6 @@ About My Business Account</h1>
 
     
 
-
-	
-	<h2 id="section2">Who can use My Business Account</h2>
-  <p>Business owners (including partners, directors, and officers) can use My Business Account. Authorized representatives (including accountants and employees) can access these services through <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
-	
-<h2 id="section3">Sign-in options</h2>
-	<p>There are 2 options for signing in:</p>
-	<dl class="dl-horizontal">
-    <dt>CRA user ID and password</dt>
-    <dd>This option lets you create a unique CRA user ID and password to sign in to your  account.<br>Learn more: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/about-cra-userID-password.html">About CRA user ID and password</a></dd>
-    <dt><i>Interac&reg</i> sign-in partner</dt>
-    <dd>This option lets you sign in with your online banking information.<br>Learn more: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/about-interac-partner.html">About <i>Interac</i> sign-in partner</a></dd>
-     </dl>
-	<p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">Sign in to My Business Account</a></p>
-	<!--<p>To sign in to another CRA sign-in account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html">CRA sign-in accounts</a></p>-->
-	
-	<h2 id="section4">Features available in My Business Account</h2>
-	<p>After signing into My Business Account, you can:</p>
-	<ul>
-		<li>View and update your business information</li>
-		<li>View and pay your account balances</li>
-		<li>Get email notifications</li>
-		<li>Set up direct deposit</li>
-		<li>Track your transactions</li>
-		<li>Set up a payment plan</li>
-		
-	</ul>
-
-	<h2 id="section5">Account availability</h2>
- <p>Access your account during our available hours of service. If you are having difficulty, you might need to update your browser.</p>
-	  <h3>Hours of service</h3>
-		 <section data-ajax-replace="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/availability.html#ajax-hours-of-service"></section>
-
-<h3>Browser requirements</h3>
-	  
-		      <section data-ajax-replace="https://cra-proto.github.io/sign-in-prototype/en/revenue-agency/services/e-services/cra-login-services/availability.html#ajax-browser-requirements"></section>
 
     <h2 id="section6">Resources</h2>
   <p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=mybusacct">Help with using My Business Account</a></p>
