--- a/en/revenue-agency/services/e-services/cra-login-services/about-provincial-partner.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/about-provincial-partner.html
@@ -6,7 +6,7 @@
 <head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-<title>About provincial sign-in partner - Canada.ca</title>
+<title>About provincial partners - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <!-- Meta data --> 
 <!-- Meta data--> 
@@ -40,10 +40,10 @@
 					title: "Canada Revenue Agency",
 					href: "https://www.canada.ca/en/revenue-agency.html"
 				},{
-					title: "CRA accounts",
+					title: "CRA sign-in services",
 					href: "/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html"
 					},{
-					title: "Help with using your CRA accounts",
+					title: "Help for CRA sign-in services",
 					href: "/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html"
 				}],
 				search: true,
@@ -53,25 +53,25 @@
 </script>
 <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement" class="container">
 <div class="mwstitle section">
-<p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">CRA account help</p>
-<h1 class="mrgn-tp-0 gc-thickline" id="wb-cont">About provincial sign-in partner</h1>
+<p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">CRA sign-in services help</p>
+<h1 class="mrgn-tp-0 gc-thickline" id="wb-cont">About provincial partners</h1>
 </div>
   <nav role="navigation" class="gc-toc">
-<p>A provincial sign-in partner uses a type of government-issued identification to sign in. Currently, this sign-in option is only available to residents of British Columbia and Alberta.</p>
+<p>A provincial partner uses a type of government-issued identification to sign in. Currently, this sign-in option is only available to residents of British Columbia and Alberta.</p>
 	<!--  <p>You can use a provincial sign-in partner to sign in to <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account</a>. You <strong>cannot</strong> use a provincial sign-in partner to sign in to My Business Account or Represent a Client. If you already access My Account using a CRA user ID and password or <i>Interac&reg</i> sign-in service, you may continue using that method.</p> -->  
 	  <h3>On this page</h3>
     <ul>
-      <li><a href="#section1">Who can use a provincial sign-in partner</a></li>
+      <li><a href="#section1">Who can use a provincial partner</a></li>
       <li><a href="#section2">Benefits and limitations</a></li>
       <li><a href="#section3">Resources</a></li>
     <!-- <li><a href="#section4">Privacy and security</a></li>-->
     </ul>
   </nav> 
-	  <h2 id="section1">Who can use a provincial sign-in partner</h2>
+	  <h2 id="section1">Who can use a provincial partner</h2>
 
 	<!--  <ul>
      <li>My Account</li></ul>-->
-	 <!-- <p>You <strong>cannot</strong> use a provincial sign-in partner to sign in to:</p>
+	 <!-- <p>You <strong>cannot</strong> use a provincial partner to sign in to:</p>
 	  <ul class="fa-ul">
      <li><span class="fas fa-times text-danger fa-li"></span>My Business Account</li>
 		  <li><span class="fas fa-times text-danger fa-li"></span>Represent a Client</li></ul>-->
@@ -80,30 +80,38 @@
 <p>To register with this option, you must have:</p>
 	<ul class="list-unstyled cnjnctn-type-and cnjnctn-xs">
 		<li class="cnjnctn-col-60">
-	<p>An account with one of our supported provincial partners:</p>
+	<p>An account with one of our provincial partners:</p>
 <ul>
   <li>BC Services Card</li>
   <li>Alberta.ca Account</li>
 </ul></li>
 <!--    <p>The BC Services Card and Alberta.ca Account are each a type of government-issued identification assigned to residents of BC and Alberta.</p>-->
 	<li class="cnjnctn-col-80">  
-<p>A social insurance number (SIN) to validate your identity the first time you sign in.</p> <p>You will not need to use <i>Interac&reg</i> document verification service or a CRA security code to further validate your identity.</p></li></ul>
-		  <p class="mrgn-tp-lg">You can <strong>only</strong> use a provincial sign-in partner to sign in to My Account. If you already access My Account using a CRA user ID and password or an <i>Interac</i> sign-in partner, you may continue using that method.</p>
+<p>A social insurance number (SIN) to validate your identity the first time you sign in.</p> 
+		<details><summary>If you do not have a SIN</summary>
+			<p>If you don't have a SIN, we will also accept:</p>
+			<ul><li>A temporary tax number(TTN)</li>
+				<li>An individual tax number (ITN)</li></ul>
+			
+		</details>
+		<p>You will <strong>not</strong> need to use the document verification service or a CRA security code to further verify your identity.</p></li></ul>
+		  <p class="mrgn-tp-lg">You can <strong>only</strong> use a provincial partner to sign in to My Account. If you already access My Account using a CRA user ID and password or a Sign-In Partner, you may continue using that option.</p>
  
 	
 	<h2 id="section2">Benefits and limitations</h2>
-<p>Registering with a provincial sign-in partner allows you to:</p>
+<p>Registering with a provincial partner allows you to:</p>
     <ul class="fa-ul">
-     <li><span class="fas fa-check text-success fa-li"></span>Get immediate access to most My Account features</li>
+     <li><span class="fas fa-check text-success fa-li"></span>Get immediate access to most services</li>
      <li><span class="fas fa-check text-success fa-li"></span>Register even if you haven’t filed your taxes in the previous 2 years, as long as you have filed your taxes at least once in the past</li>
     </ul>
-    <p>With a provincial partner you cannot use certain accounts and services, for instance:</p>
+    <p>With a provincial partner you cannot use certain services, including:</p>
        <ul class="fa-ul">
-           <li><span class="fas fa-times text-danger fa-li"></span>My Business Account or Represent a Client</li>
-     <li><span class="fas fa-times text-danger fa-li"></span>Express Notice of Assessment</li>
+           <li><span class="fas fa-times text-danger fa-li"></span>My Business Account </li>
+     <li><span class="fas fa-times text-danger fa-li"></span>Represent a Client</li>
      <li><span class="fas fa-times text-danger fa-li"></span>Auto-fill My Return</li>
   </ul>
-<p>If you would like to access those accounts and services, you can also create a CRA user ID and password or use an <i>Interac</i> sign-in partner to do so.</p>
+<p>If you would like to access those services, you can also create a CRA user ID and password or use a Sign-In Partner to do so.</p>
+	<p>If you use a BC Services Card, you will not be required to enroll in multi-factor authentication (MFA).</p>
 	  <h2 id="section3">Resources</h2>
         <p>For assistance with your BC Services Card, go to: <a href="https://www2.gov.bc.ca/gov/content/governments/government-id/bcservicescardapp">BC Services Card Login</a></p>
     <p>For assistance with your Alberta.ca Account, go to: <a href="https://www.alberta.ca/alberta-ca-account-contact">Alberta.ca Account - Contact</a></p>
