--- a/en/revenue-agency/services/e-services/cra-login-services/security.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/security.html
@@ -240,7 +240,7 @@
 <li><a href='https://www.canada.ca/en.html'>Canada.ca</a></li>
 <li><a href='https://www.canada.ca/en/revenue-agency.html'>Canada Revenue Agency</a></li>
 <li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html'>CRA sign-in services</a></li>
-<li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html'>Help with using your CRA sign-in services</a></li>
+<li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html'>Help for CRA sign-in services</a></li>
 </ol></div></nav>
 
 
