--- a/en/revenue-agency/services/e-services/cra-login-services/groupidsetup.html
+++ b/en/revenue-agency/services/e-services/cra-login-services/groupidsetup.html
@@ -243,8 +243,8 @@
 		<nav id="wb-bc" property="breadcrumb"><h2 class="wb-inv">You are here:</h2><div class="container"><ol class="breadcrumb">
 <li><a href='https://www.canada.ca/en.html'>Canada.ca</a></li>
  <li><a href='https://www.canada.ca/en/revenue-agency.html'>Canada Revenue Agency</a></li>
-<li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html'>CRA accounts</a></li>
-			<li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html'>Help with using your CRA accounts</a></li>
+<li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services.html'>CRA sign-in services</a></li>
+			<li><a href='/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html'>Help for CRA sign-in services</a></li>
 
 </ol></div></nav>
 
@@ -278,11 +278,11 @@
             <div class="mwstitle section">
 
    <div class="mwstitle section">
-<p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">CRA account help</p>
+<p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">CRA sign-in services help</p>
 <h1 class="mrgn-tp-0 gc-thickline" id="wb-cont">Create and manage a GroupID in Represent a Client</h1>
 </div>
 <!--<p>Learn how to set up GroupID and associate representatives to it.</p>-->
-		    <p>Any representative with a Represent a Client (RAC) account can create a group that will be identified by a unique GroupID. Taxpayers can then authorize the GroupID. Representatives must be associated to that GroupID to access the information of those taxpayers.</p>
+			    <p>Any representative can sign in to Represent a Client (RAC) and create a group that will be identified by a unique GroupID. Taxpayers can then authorize the GroupID. Representatives must be associated to that GroupID to access the information of those taxpayers.</p>
 
 
 
@@ -303,7 +303,7 @@
 	<ul>
 		<li>Facilitate the management of representatives; new authorization forms are not required when a new representative joins the organization</li>
 		<li>Delegate managing the group to an administrator</li>
-		<li>Promote transparency since group administrators are able to view the transactions performed on client accounts by representatives assigned to the group</li>
+		<li>Promote transparency since group administrators are able to view the transactions performed on behalf of clients by representatives assigned to the group</li>
 	</ul>
 
 	
@@ -312,7 +312,7 @@
 		 <p>Follow these steps to create a GroupID:</p>
     <ol class="">
   <!--  <li>Register your business with RAC using your business number (BN)</li>-->
-	       <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Sign in to your RAC account</a></li>
+	       <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Sign in to Represent a Client</a></li>
 	    <li>Select <strong>Review and Update</strong>
     <li>In the <strong>Manage associations</strong> tab, select <strong>Create a group</strong> </li>
       <li>Enter and confirm group information</li></ol>
@@ -420,8 +420,8 @@
       <tr class="fltrTr">
           <td><p class="text-left">View and update the GroupID information</p></td>
         <td><ul class="list-unstyled text-left lst-spcd">
-            <li class="lvl-1-toggle grouped" data-wb-tags="subject_lvl1"><strong>Junior rep: </strong>With <strong>No access</li>
-            <li class="lvl-2-toggle grouped"><strong>Senior rep: </strong>With <strong>No access</li>
+            <li class="lvl-1-toggle grouped" data-wb-tags="subject_lvl1"><strong>Junior rep: </strong> <strong>No access</li>
+            <li class="lvl-2-toggle grouped"><strong>Senior rep: </strong> <strong>No access</li>
             <li class="lvl-lr-toggle grouped"> <strong>Group admin: </strong>Allowed</li>
           </ul></td>
       </tr>
@@ -689,8 +689,8 @@
     
 <h4>Assigning privileges</h4>
     <p>You can assign certain privileges to representatives that will allow them to perform various tasks. They can be assigned to a representative who doesn't already have them. Where these privileges are assigned to a representative, they will have the ability to perform all of the permissions grouped under that privilege.</p>
-	 
-	 <details><summary>View and delete individual clients</summary>  <p>The<strong> View and delete individual clients</strong> privilege groups these 4 permissions:</p>  <ul> 
+
+	 		 <details><summary>View and delete individual clients</summary>  <p>The<strong> View and delete individual clients</strong> privilege groups these 4 permissions:</p>  <ul> 
  <li>View individual client list</li> 
  <li>Delete Authorizations</li> 
 			 <li>View individual transactions (Jr. admins have this ability by default)</li>
@@ -702,7 +702,7 @@
  <li>Delete Authorizations</li> 
 		 <li>View business transactions (Jr. admins have this ability by default)</li>
 </ul> </details>  
-		
+
 	<details><summary>View and delete trust clients</summary>
 		<p>The<strong> View and delete trust clients</strong> privilege groups these 3 permissions:</p>
 		<ul>
@@ -717,14 +717,13 @@
 
 
 </div>
-</div>
-<h2 id="section4">Manage representative access</h2>	
+	<h2 id="section4">Manage representative access</h2>	
 		
 	<h3>Associate representatives to a GroupID</h3>    
     <!--  <li>Have your representatives register for a RepID through the <strong>Register yourself</strong> link on the Represent a Client welcome page</li>-->
       <p>Follow these steps to associate representatives to a GroupID:</p>
     <ol class="">
-        <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Sign in to your RAC account</a></li>
+        <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Sign in to Represent a Client</a></li>
         <li>Select <strong>Review and update</strong></li>
         <li>Select the group you wish to manage</li>
       <li>In the <strong>Manage representatives' access</strong> tab, select <strong>Associate representatives</strong> </li>
@@ -735,7 +734,7 @@
 		<h3>Remove a representative from a GroupID</h3>
 		<p>Follow these steps to remove a representative or yourself from a GroupID. If you are the only Group administrator under the group, you will be requested to associate another group administrator prior to removing yourself from the group.</p>
      <ol class="">
-        <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Sign in to your RAC account</a></li>
+        <li><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Sign in to Represent a Client</a></li>
         <li>Select <strong>Review and update</strong></li>
 	     <li>In the <strong>Manage representatives access</strong> tab, select <strong>Representatives lists</strong> </li>
 	     <li>Select the list you wish to update or search for the representative by name</li>
@@ -743,7 +742,7 @@
 	     <li>Select <strong>Remove from group</strong></li></ol>
 
         </div>
-
+</div>
             <section class="pagedetails">
     <h2 class="wb-inv">Page details</h2>
     <div class="row">
