--- a/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-businesses.html
+++ b/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/dd-businesses.html
@@ -138,7 +138,8 @@
 		   </li>
 	   </ul>
 	 <!--  <p><span class="far fa-clock"></span> <strong>Do not close your old bank account</strong> until your first payment has been deposited to your new bank account</p>-->
-      <div class="wb-tabs mrgn-tp-lg">
+     <h2>Ways to update your direct deposit information</h2>
+	   <div class="wb-tabs mrgn-tp-lg">
 	<div class="tabpanels">
 		<details id="details-panel1" class="provisional wb-details-close">
             <summary><span class="fas fa-desktop mrgn-rght-sm"></span>Online</summary>
@@ -156,9 +157,9 @@
     <li class="mrgn-bttm-sm">Select <strong>Manage direct deposit</strong></li>
     <li>Update your direct deposit information</li>
   </ol>		
-<h3 class=h4>If you can't access your account</h3>
+<h3 class=h4>If you can't sign in to My Business Account</h3>
 	<p>If your phone number has changed and you can't receive your multi-factor authentication (MFA) passcode to sign in to your account, you will have to <a href="#details-panel3">update your information through your Canadian bank or credit union</a>.</p>
-	<p><a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html">Help with using your CRA accounts</a></p>
+	<p>For more help with My Business Account, go to: <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs.html?type=mybusacct">Help with using My Business Account</a></p>
 			
 <!--	<details><summary class="max-content">Make a change for someone else</summary>	
 		<p>To change direct deposit information for someone else, including a spouse or family member, you must be their legal representative and use <a href="https://cra-proto.github.io/sign-in-test/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a>.</p>
